# learning-languages

./: .gitignore  CLAUDE.md  api-documentation-v3.md  docker-compose.yml  output.m4a
.claude/agents/: backend-api-test-runner.md
app/: pubspec.yaml
app/integration_test/: app_test.dart
app/lib/: main.dart
app/test/: widget_test.dart
backend/: package-lock.json  package.json  server.js
backend/data/: movies.js
backend/db/: connection.js
backend/plugins/: auth.js
backend/routes/: audio.js  movies.js  practice.js
backend/services/: card-selector.js  maturity.js  option-generator.js  spaced-repetition.js  training-window.js
ingestion/: README.md  pyproject.toml
ingestion/ingestion/: cli.py  complexity.py  db.py  pipeline.py  scaffolding.py  srt_parser.py  text_cleaner.py  tts.py
ingestion/ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ingestion/tests/: test_complexity.py  test_scaffolding.py  test_srt_parser.py  test_text_cleaner.py
pattern-search/: docker-compose.yml
pattern-search/backend/: dep_search.py  main.py  minio_client.py  requirements.txt  srt_parser.py
pattern-search/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
subtitles/solo.leveling.s01.e01/: Solo.Leveling.S01E01.Im.Used.to.It.1080p.CR.WEB-DL.DUAL.AAC2.0.H.264-ShiNiGAMi.srt
tests/: package-lock.json  package.json
tests/api/: auth.test.js  movies.test.js  practice.test.js
wiremock/__files/: get-movie-details-interstellar-response.json  get-movie-details-response.json  get-movies-response.json  (+4 more)
(+46 files in other folders)
